delete some wrong words

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ port = 11434@11434@11434
 
 
 [online_llm]
-;没完成呢
+;unfinished
 base_url =
 api_key = sk-xxx
 ;check the biggest qps!less than it
@@ -13,7 +13,6 @@ thread_count = 10
 
 [res_csv]
 path = ./res.csv
-;序号 时间 是否成功（success/fail）  请求的服务器url 提示词    结果
 header = task_id@time@bingo@ollama_url@task_prompt@response_content
 
 [param]
